--- a/pepeizqs deals web/Pages/Admin/Juegos/Añadir.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Juegos/Añadir.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model pepeizqs_deals_web.Pages.Juegos.AñadirModel
+@model pepeizqs_deals_web.Pages.Admin.Juegos.AñadirModel
 
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
