--- a/pepeizqs deals web/Pages/Admin/Juegos/Borrar.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Juegos/Borrar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model pepeizqs_deals_web.Pages.Juegos.BorrarModel
+@model pepeizqs_deals_web.Pages.Admin.Juegos.BorrarModel
 
 @using Microsoft.Data.SqlClient;
 
