--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -37,10 +37,10 @@
                             @if (await UsuarioCoger.RolDios(UserManager, User) == true)
                             {
                                 <li class="nav-item">
-                                    <a class="texto-cabecera" asp-area="" asp-page="/Juegos/Index">Admin Juegos</a>
+                                    <a class="texto-cabecera" asp-area="" asp-page="/Admin/Juegos/Index">Admin Juegos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="texto-cabecera" asp-area="" asp-page="/Tiendas/Index">Admin Tiendas</a>
+                                    <a class="texto-cabecera" asp-area="" asp-page="/Admin/Tiendas/Index">Admin Tiendas</a>
                                 </li>
                             }
                         }
