--- a/pepeizqs deals web/Pages/Admin/Juegos/Editar.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Juegos/Editar.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model pepeizqs_deals_web.Pages.Juegos.EditarModel
+@model pepeizqs_deals_web.Pages.Admin.Juegos.EditarModel
 
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
