--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.GameModel
 
+@using Herramientas
+@using Juegos
+
 @{
 	ViewData["Title"] = Model.juego.Nombre;
 	Layout = "/Pages/Shared/_Layout.cshtml";
@@ -10,8 +13,71 @@
     <img class="juego-fondo" src="@Model.juego.Imagenes.Library_1920x620"/>
 
     <div class="juego-contenido">
-        <div class="perfil perfil-espacio-bottom">
-            @Model.juego.Nombre
-        </div>    
+        <div class="perfil perfil-espacio-bottom juego-cabecera">      
+			<div class="perfil-flexible-centrado">
+				<div class="juego-flexible-izquierda">
+					<img src="@Model.juego.Imagenes.Header_460x215" class="juego-imagen" />
+				</div>
+				<div class="admin-busqueda juego-titulo">
+					@Model.juego.Nombre <br/>
+
+					@if (Model.juego.IdSteam > 0)
+					{
+						<a class="juego-boton-pequeño" href="https://store.steampowered.com/app/@Model.juego.IdSteam" target="_blank">View on Steam</a>
+					}		
+				</div>
+
+				@if (Model.juego.Analisis != null)
+				{
+					<div class="juego-analisis">
+						<div class="juego-analisis-texto2">Rating on Steam</div>
+
+						<div class="juego-analisis-display">
+							@if (int.Parse(Model.juego.Analisis.Porcentaje) > 74)
+							{
+								<img src="/imagenes/analisis/positive2.png" class="juego-analisis-imagen" />
+							}
+
+							@if (int.Parse(Model.juego.Analisis.Porcentaje) > 49 && int.Parse(Model.juego.Analisis.Porcentaje) < 75)
+							{
+								<img src="/imagenes/analisis/mixed2.png" class="juego-analisis-imagen" />
+							}
+
+							@if (int.Parse(Model.juego.Analisis.Porcentaje) < 50)
+							{
+								<img src="/imagenes/analisis/negative2.png" class="juego-analisis-imagen" />
+							}
+
+							<div class="juego-analisis-texto">@Model.juego.Analisis.Porcentaje% (@Calculadora.RedondearAnalisis(Model.juego.Analisis.Cantidad))</div>
+						</div>
+					</div>				
+				}
+			</div>
+        </div>   
+		
+		@foreach (var drm in JuegoDRM2.CargarDRMs())
+		{
+			@if (JuegoFicha.OrdenarPrecios(Model.juego.PrecioActualesTiendas, drm).Count > 0)
+			{
+				<div class="perfil">
+					@drm
+
+					@foreach (var precio in JuegoFicha.OrdenarPrecios(Model.juego.PrecioActualesTiendas, drm))
+					{
+						<a class="juego-boton-pequeño juego-imagen-boton-espacio" href="@precio.Enlace" target="_blank">
+							<div>
+								<img src="@JuegoFicha.SacarImagenTienda(precio.Tienda)" class="juego-imagen-boton" />
+								
+								<div>
+									@precio.Precio.ToString()
+								</div>	
+							</div>					
+						</a>
+					}
+				</div>
+			}
+		}
+		
+		
     </div>
 </div>
