--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -16,3 +16,10 @@
     --colorTextoAlerta: #664d03;
     --fondoAlerta: #fff3cd;
 }
+
+@font-face {
+    font-family: 'Noto Sans';
+    src: url('../fuente/NotoSans-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
