--- a/pepeizqs deals web/wwwroot/css/cabecera_cuerpo_pie.css
+++ b/pepeizqs deals web/wwwroot/css/cabecera_cuerpo_pie.css
@@ -7,6 +7,7 @@
     background-color: var(--fondoCuerpo);
     color: var(--colorTexto);
     height: 100%;
+    font-family: 'Noto Sans';
 }
 
 .cuerpo-espacio {
