--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -256,6 +256,11 @@
     justify-content: center;
 }
 
+.admin-tiempohace {
+    text-align: center;
+    line-height: 40px;
+}
+
 .juego-wrap {
     overflow: hidden;
     position: relative;
@@ -278,7 +283,7 @@
 }
 
 .juego-cabecera {
-    padding: 10px;
+    padding: 0px;
 }
 
 .juego-flexible-izquierda {
@@ -286,14 +291,46 @@
     max-width: 270px;
 }
 
+@media(max-width: 800px) {
+    .juego-flexible-izquierda {
+        min-width: 0px;
+        max-width: 0px;
+    }
+}
+
 .juego-imagen {
     display: block;
     max-width: 100%;
 }
 
+@media(max-width: 800px) {
+    .juego-imagen {
+        display: none;
+    }
+}
+
 .juego-titulo {
     font-size: 22px;
-    line-height: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    width: 100%;
+}
+
+@media(max-width: 800px) {
+    .juego-titulo {
+        margin: 5px;
+    }
+}
+
+.juego-versteam-espacio {
+    margin-top: 10px;
+}
+
+@media(max-width: 800px) {
+    .juego-versteam-espacio {
+        margin-top: 5px;
+    }
 }
 
 .juego-analisis {
@@ -313,7 +350,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 10px;
 }
 
 .juego-analisis-imagen {
@@ -361,4 +397,25 @@
 
 .juego-imagen-boton-espacio {
     margin: 5px 0px;
+}
+
+.juego-minimo {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.juego-descuento-precio {
+    display: flex;
+}
+
+.juego-descuento {
+    font-size: 18px;
+    margin: 10px;
+    padding: 10px;
+    background-color: darkgreen;
+}
+
+.juego-precio {
+    font-size: 18px;
+    margin: 20px;
 }
