--- a/pepeizqs deals web/Pages/Admin/Tiendas/Humble.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Tiendas/Humble.cshtml
@@ -18,9 +18,9 @@
     {
         <div class="perfil perfil-espacio-bottom">
             <form method="post">
-                <textarea id="humble-texto" asp-for="Input.Texto" class="entrada-texto"></textarea>
+                <input id="humble-texto" asp-for="Input.Texto" class="entrada-texto"/>
 
-                <button id="humble-cargar" type="submit" class="boton">Cargar</button>
+                <button id="humble-cargar" type="submit" class="boton" style="margin-top: 30px;">Cargar</button>
             </form>
         </div>
 
