--- a/pepeizqs deals web/Pages/Admin/Tiendas/Index.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Tiendas/Index.cshtml
@@ -19,25 +19,39 @@
 	{
 		<div class="perfil perfil-espacio-bottom">
 			<form method="post">
-				<div class="admin-grid">
-					@foreach (Tienda tienda in TiendasCargar.GenerarListado())
+				@foreach (Tienda tienda in TiendasCargar.GenerarListado())
+				{
+					@if (tienda.AdminEnseñar == true)
 					{
-						@if (tienda.EnseñarAdmin == true)
-						{
-							<div>
-								<button class="boton admin-boton-imagen-300x80" style="background-image: url(@tienda.Imagen300x80);" id="@tienda.Id" asp-route-id="@tienda.Id" type="submit"></button><br />
-
-								<div class="admin-tiempohace">@TiendasBaseDatos.SacarTiempo(tienda.Id)</div>
+						<div class="perfil-flexible-centrado">
+							<div style="width: 50%;">
+								@if (tienda.AdminInteractuar == true)
+								{
+									<button class="boton-pequeño admin-boton-imagen-300x80" style="background-image: url(@tienda.Imagen300x80);" id="@tienda.Id" asp-route-id="@tienda.Id" type="submit"></button>
+								}
+								else
+								{
+									<p class="boton-pequeño admin-boton-imagen-300x80" style="background-image: url(@tienda.Imagen300x80); background-color: transparent;" id="@tienda.Id" asp-route-id="@tienda.Id"></p>
+								}					
 							</div>
-						}					
+							<div style="width: 45%;">
+								<div class="admin-tiempohace">@BaseDatos.Tiendas.Tiempo.Sacar(tienda.Id)</div>
+							</div>
+						</div>
 					}
-				</div>
+				}
 			</form>
 		</div>
 
-		<div class="perfil">
+		<div class="perfil perfil-espacio-bottom">
 			@ViewData["Mensaje"]
-		</div>		
+		</div>
+		
+@*		<div class="perfil">
+			<form method="post">
+				<button class="boton-pequeño admin-boton-imagen-300x80" id="test" asp-route-id="test" type="submit">Test</button>
+			</form>
+		</div>*@
 	}
 }
 
