--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -1,5 +1,6 @@
 ﻿:root {
     --fondoOscuro: #002033;
+    --fondoOscuroTransparente: rgba(0, 32, 51, 0.9);
     --fondoCuerpo: #1b2838;
     --tamañoTexto: 16px;
     --colorTexto: #f5f5f5;
