--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -240,13 +240,14 @@
 
 .admin-boton-imagen-300x80 {
     background-position: center;
-    background-size: cover;
-    background-color: var(--fondoBoton);
+    background-size: 30%;
+    background-color: var(--fondoBotonPequeño);
     background-origin: content-box;
     background-repeat: no-repeat;
-    padding: 45px;
-    height: 80px;
-    width: 300px;
+    padding: 40px;
+    height: 60px;
+    width: 100%;
+    margin: 15px;
 }
 
 .admin-grid {
@@ -257,7 +258,7 @@
 }
 
 .admin-tiempohace {
-    text-align: center;
+    text-align: left;
     line-height: 40px;
 }
 
@@ -283,7 +284,14 @@
 }
 
 .juego-cabecera {
-    padding: 0px;
+    background-color: var(--fondoOscuroTransparente);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-clip: border-box;
+    border: 0px;
 }
 
 .juego-flexible-izquierda {
@@ -399,9 +407,21 @@
     margin: 5px 0px;
 }
 
-.juego-minimo {
+.juego-drm-centrado {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.juego-drm-imagen {
     text-align: center;
-    margin-bottom: 15px;
+    width: 10%;
+}
+
+.juego-minimo {
+    text-align: left;
+    margin-bottom: 20px;
 }
 
 .juego-descuento-precio {
