--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/pepeizqs_deals_web.styles.css" asp-append-version="true" />
+
+    <component type="typeof(Juegos.Juego)" render-mode="ServerPrerendered" />
 </head>
 
 <body class="cuerpo">
@@ -44,6 +46,10 @@
                                 </li>
                             }
                         }
+
+                        <li class="nav-item">
+                            @(await Html.RenderComponentAsync<Buscador>(RenderMode.ServerPrerendered))
+                        </li> 
                     </ul>
                 </div>
 
@@ -67,7 +73,18 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="_framework/blazor.server.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+@section JavaScript {
+
+    <script>
+        jQuery(document).ready(function () {
+            jQuery('cajabuscador').appendTo("body");
+        });
+    </script>
+
+}
