--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -19,8 +19,8 @@
 }
 
 @font-face {
-    font-family: 'Noto Sans';
-    src: url('../fuente/NotoSans-Regular.ttf') format('truetype');
+    font-family: 'Motiva Sans';
+    src: url('../fuente/MotivaSansRegular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
