--- a/pepeizqs deals web/Pages/Componentes/Buscador.razor
+++ b/pepeizqs deals web/Pages/Componentes/Buscador.razor
@@ -14,7 +14,7 @@
         @foreach (var juego in juegos)
         {
             <div class="perfil-flexible-centrado perfil-espacio-top">
-                <a class="boton-pequeño" href="/game/@juego.Id">
+                <a class="boton-pequeño" href="/game/@juego.Id" target="_blank">
                     <div class="perfil-flexible-centrado">
                         <div style="width: 12%;">
                             <img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
