--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -10,12 +10,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] • pepeizq's deals</title>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/maestro.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/cabecera_cuerpo_pie.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/pepeizqs_deals_web.styles.css" asp-append-version="true" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1b2838">
+    <meta name="msapplication-TileColor" content="#1b2838">
+    <meta name="theme-color" content="#ffffff">
 
     <component type="typeof(Juegos.Juego)" render-mode="ServerPrerendered" />
 </head>
@@ -33,7 +42,7 @@
                 </button>
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1" style="align-items: center;">
                         @if (SignInManager.IsSignedIn(User))
                         {
                             @if (await UsuarioCoger.RolDios(UserManager, User) == true)
@@ -41,14 +50,14 @@
                                 <li class="nav-item">
                                     <a class="texto-cabecera" asp-area="" asp-page="/Admin/Juegos/Index">Admin Juegos</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item" style="margin-right: 20px;">
                                     <a class="texto-cabecera" asp-area="" asp-page="/Admin/Tiendas/Index">Admin Tiendas</a>
                                 </li>
                             }
                         }
 
                         <li class="nav-item">
-                            @(await Html.RenderComponentAsync<Buscador>(RenderMode.ServerPrerendered))
+                            @(await Html.RenderComponentAsync<Componentes.Buscador>(RenderMode.ServerPrerendered))
                         </li> 
                     </ul>
                 </div>
