--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -277,6 +277,7 @@
     width: 100%;
     height: auto;
     mask-image: linear-gradient(to bottom, rgb(0, 0, 0) 50%, transparent 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgb(0, 0, 0) 50%, transparent 100%);
 }
 
 .juego-contenido {
