--- a/pepeizqs deals web/Pages/Admin/Tiendas/Index.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Tiendas/Index.cshtml
@@ -36,7 +36,7 @@
 								}					
 							</div>
 							<div style="width: 45%;">
-								<div class="admin-tiempohace">@BaseDatos.Tiendas.Tiempo.Sacar(tienda.Id)</div>
+								<div class="admin-tiempohace">@BaseDatos.Tiendas.Admin.ComprobacionMensaje(tienda.Id)</div>
 							</div>
 						</div>
 					}
