--- a/pepeizqs deals web/Pages/Admin/Tiendas/Index.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Tiendas/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@page
 @model pepeizqs_deals_web.Pages.Admin.Tiendas.IndexModel
 
-@using Herramientas
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
 @using Tiendas2
@@ -55,7 +54,7 @@
 						<button class="boton-pequeño" style="text-align: center;" id="divisas" asp-route-id="divisas" type="submit">Actualizar</button>
 					</div>
 					<div style="width: 75%;">
-						<div class="admin-tiempohace">@Divisas.Mensaje()</div>
+						<div class="admin-tiempohace">@Herramientas.Divisas.Mensaje()</div>
 					</div>
 				</div>
 			</form>
