--- a/pepeizqs deals web/Pages/Admin/Juegos/Index.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Juegos/Index.cshtml
@@ -19,7 +19,7 @@
 		<div class="perfil perfil-espacio-bottom">
 			<div class="perfil-flexible">
 				<div class="perfil-flexible-izquierda">
-					<a class='boton' href='/Juegos/Añadir'>Añadir Juego</a>
+					<a class='boton' href='/Admin/Juegos/Añadir'>Añadir Juego</a>
 				</div>
 			</div>
 		</div>
