--- a/pepeizqs deals web/Pages/Admin/Juegos/Editar.cshtml
+++ b/pepeizqs deals web/Pages/Admin/Juegos/Editar.cshtml
@@ -159,6 +159,19 @@
 							}
 						}
 					}
+
+					@if (Model.juegoEditar.Media.Miniaturas != null)
+					{
+						@if (Model.juegoEditar.Media.Miniaturas.Count > 0)
+						{
+							@for (int i = 0; i < Model.juegoEditar.Media.Miniaturas.Count; i++)
+							{
+								<label class="texto-info-entrada admin-añadir-espacio-top">Miniatura @i.ToString()</label>
+								<input class="entrada-texto" name="miniatura_@i.ToString()" value="@Model.juegoEditar.Media.Miniaturas[i]" />
+								<img src="@Model.juegoEditar.Media.Miniaturas[i]" />
+							}
+						}
+					}
 				}
 
 				<hr />
