--- a/pepeizqs deals web/Pages/Shared/_Imports.razor
+++ b/pepeizqs deals web/Pages/Shared/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web    
 @using Microsoft.JSInterop     
 @using System.IO    
+@using pepeizqs_deals_web
+@using pepeizqs_deals_web.Pages.Componentes
